# ChangeLog for sys-devel/gettext
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.140 2007/02/06 02:47:37 dang Exp $

  06 Feb 2007; Daniel Gryniewicz <dang@gentoo.org> gettext-0.16.1.ebuild:
  Marked stable on amd64 for bug #163178

  31 Jan 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  gettext-0.16.1.ebuild:
  Stable on ppc wrt bug #163178.

  23 Jan 2007; Fabian Groffen <grobian@gentoo.org> gettext-0.12.1-r2.ebuild,
  gettext-0.14.1-r1.ebuild, gettext-0.14.2.ebuild, gettext-0.14.4.ebuild,
  gettext-0.14.5.ebuild, gettext-0.14.6.ebuild, gettext-0.15.ebuild,
  gettext-0.15-r1.ebuild, gettext-0.16.1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  23 Jan 2007; Jeroen Roovers <jer@gentoo.org> gettext-0.16.1.ebuild:
  Stable for HPPA (bug #163178).

  22 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> gettext-0.16.1.ebuild:
  Stable on sparc wrt #163178

  22 Jan 2007; Markus Rothe <corsair@gentoo.org> gettext-0.16.1.ebuild:
  Stable on ppc64; bug #163178

  22 Jan 2007; Raúl Porcel <armin76@gentoo.org> gettext-0.16.1.ebuild:
  x86 stable wrt bug 163178

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  gettext-0.12.1-r2.ebuild, gettext-0.14.1-r1.ebuild:
  Remove gnuconfig_update usage, leave it to econf.

*gettext-0.16.1 (30 Dec 2006)

  30 Dec 2006; Mike Frysinger <vapier@gentoo.org> +gettext-0.16.1.ebuild:
  Version bump #158820 by Guido Flohr.

  28 Dec 2006; Mike Frysinger <vapier@gentoo.org> gettext-0.15-r1.ebuild:
  Fixes from Chris Mayo to cleanup doc handling #154907.

  18 Oct 2006; Roy Marples <uberlord@gentoo.org> gettext-0.15-r1.ebuild:
  Added ~sparc-fbsd keyword.

  14 Oct 2006; Aron Griffis <agriffis@gentoo.org> gettext-0.15.ebuild:
  Mark 0.15 stable on ia64. #148798

*gettext-0.15-r1 (09 Oct 2006)

  09 Oct 2006; Emanuele Giaquinta <exg@gentoo.org>
  +files/gettext-0.15-expat-no-dlopen.patch, +gettext-0.15-r1.ebuild: