@@ -1,6 +1,13 @@
 # ChangeLog for sys-devel/gettext
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.140 2007/02/06 02:47:37 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.142 2007/02/26 01:32:09 vapier Exp $
+
+  26 Feb 2007; Mike Frysinger <vapier@gentoo.org> gettext-0.16.1.ebuild:
+  Use preserve_old_lib rather than screwing with $ROOT ourselves #168046.
+
+  21 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org>
+  gettext-0.16.1.ebuild:
+  Stable on MIPS; bug #163178
 
   06 Feb 2007; Daniel Gryniewicz <dang@gentoo.org> gettext-0.16.1.ebuild:
   Marked stable on amd64 for bug #163178
